[tool.poetry]
name = "baidunetdisk"
version = "0.1.0"
description = ""
authors = ["luohua"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
